z-index fix

--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -3,7 +3,7 @@
   height: 100%;
   padding: 4rem 5rem;
   position: fixed;
-  z-index: 100;
+  z-index: 999;
   top: 0;
   left: 0;
   background: linear-gradient(to right, #32425030, #6d80a21f);
