--- a/css/_header.scss
+++ b/css/_header.scss
@@ -66,7 +66,7 @@ nav {
   width: 100%;
   background: $mainBodyBack;
   padding: 10px 2rem;
-  z-index: 999;
+  z-index: 998;
   transition: 300ms;
   .logo {
     width: 50px;
